--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <h2>Our Best Sellers</h2>
   <div class="menu-container">
     <div class="card best-seller">
-      <img src="biko.jpg" alt="Biko">
+      <img src="Biko.jpg" alt="Biko">
       <h3>Biko</h3>
       <p>Sweet sticky rice topped with caramelized coconut.</p>
     </div>
@@ -87,4 +87,5 @@
   </footer>
 </body>
 </html>
+
 
